# KNN

./: CMakeLists.txt  FeedForwardNetwork.h  Matrix.cpp  Matrix.h  gpu.cpp  gpu.h  main.cpp  matrix_vec.cl
test/: VectorTest.cpp
